--- a/Tontine/Application mobile/Frontend/pages/Accueil/Accueil.wxss
+++ b/Tontine/Application mobile/Frontend/pages/Accueil/Accueil.wxss
@@ -191,6 +191,30 @@
     animation: slideUp 0.3s ease-out;
     overflow: hidden;
   }
+
+  .modal-overlay2 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+  }
+  
+  .modal-container2 {
+    width: 100%;
+    max-height: 85vh;
+    background: #fff;
+    border-radius: 24rpx 24rpx 24rpx 24rpx;
+    display: flex;
+    flex-direction: column;
+    animation: slideUp 0.3s ease-out;
+    overflow: hidden;
+  }
   
   @keyframes slideUp {
     from {
@@ -229,6 +253,20 @@
   }
   
   .input-group1 {
+    margin-bottom: 30rpx;
+  }
+
+  .modal-scroll2 {
+    flex: 1;
+    max-height: calc(85vh - 200rpx);
+    overflow-y: auto;
+  }
+  
+  .modal-body2 {
+    padding: 32rpx;
+  }
+  
+  .input-group2 {
     margin-bottom: 30rpx;
   }
   
@@ -282,6 +320,15 @@
   }
 
   .modal-footer1 {
+    background: #fff;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-left: 28%;
+    margin-bottom: 5%;
+  }
+
+  .modal-footer2 {
     background: #fff;
     align-items: center;
     justify-content: center;
