--- a/Tontine/Application mobile/Frontend/pages/Tour/Tour.wxml
+++ b/Tontine/Application mobile/Frontend/pages/Tour/Tour.wxml
@@ -4,15 +4,15 @@
     <text style="font-size: 36rpx; font-weight: bold;"> Tour N°2</text>
 </view>
 <scroll-view style="width: 750rpx; height: 1001rpx; display: block; box-sizing: border-box;">
-    <view style="position: relative; width: 345rpx; background: #d3d3d3; height: 296rpx; display: block; box-sizing: border-box; left: 12rpx; top: 0rpx">
-        <text style="position: relative; left: 17rpx; top: 26rpx; font-size: 35rpx; font-weight: bold;">Nombre de participants ayant cotisé a se tour:</text>
+    <view style="position: relative; width: 345rpx; background: #fff; height: 296rpx; display: block; box-sizing: border-box; left: 12rpx; box-shadow: 0 3rpx 8rpx rgba(255,121,0,1);">
+        <text style="position: relative; left: 17rpx; top: 26rpx; font-size: 35rpx; font-weight: bold;">Nombre de participants ayant cotisé a ce tour:</text>
 
         <view style="position: relative; width: 95rpx; background: #ED6C30; height: 95rpx; left: 125rpx; top: 31rpx; display: block; box-sizing: border-box; border-radius: 99rpx">
             <text style="position: relative; left: 23rpx; top: 18rpx; font-size: 30rpx; font-weight: bolder; color: #FFFFFFFF;">2/4</text>
         </view>
     </view>
 
-    <view style="position: relative; width: 345rpx; background: #d3d3d3; height: 296rpx; display: block; box-sizing: border-box; left: 392rpx; top: -296rpx; font-size: 35rpx; font-weight: bold;">
+    <view style="position: relative; width: 345rpx; background:#fff; height: 296rpx; display: block; box-sizing: border-box; left: 392rpx; top: -296rpx; font-size: 35rpx; font-weight: bold; box-shadow: 0 3rpx 8rpx rgba(255,121,0,1);">
         <text style="position: relative; left: 12rpx; top: 26rpx;font-size: 35rpx; font-weight: bold;">Argent collecté
             pour ce tour:
             750 000/1 500 000 Frcfa
