--- a/Tontine/Application web/Frontend/src/page/DetailPage.css
+++ b/Tontine/Application web/Frontend/src/page/DetailPage.css
@@ -61,3 +61,28 @@
     cursor: pointer;
 
 }
+.monbout{
+  background: #000000;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 18px;
+  font-weight: 500;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.monbou{
+    background: #ff6b00;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 18px;
+    font-weight: 500;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.mesbouton{
+  text-align: right;
+}
