--- a/Tontine/Application web/Frontend/src/page/TontinePage.css
+++ b/Tontine/Application web/Frontend/src/page/TontinePage.css
@@ -188,7 +188,30 @@
     color: white;
     border-color: #ff6b00;
   }
+
+.pagination-button-prev{
+  background: #000000;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 18px;
+  font-weight: 500;
+  margin-right: 10px;
+  cursor: pointer;
+}
   
+.pagination-button-next{
+  background: #ff6b00;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 18px;
+  font-weight: 500;
+  margin-right: 10px;
+  cursor: pointer;
+
+}
+
   .pagination-button:disabled {
     opacity: 0.5;
     cursor: not-allowed;
